1998-05-11  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkpreview.c (gtk_preview_realize): Create the window using
	GtkPreview's visual and colormap, otherwise things can BadMatch.

	* gtk/testgtk.c (create_color_preview): 
	(create_gray_preview): Removed pushing/popping of visual/colormap
	now that GtkPreview does things correctly.

	* gtk/gtkcolorsel.c (gtk_color_selection_draw_wheel_frame): 
	(gtk_color_selection_draw_wheel): Pick the style from the correct
	place (the colorsel->wheel_area widget) so that the GCs will match
	with where we are going to paint to.

	* gtk/testgtk.c (create_color_selection): Removed pushing/popping
	of visual/colormap now that GtkColorSelection does things the
	right way.

Mon May 11 21:04:51 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkwindow.c (gtk_real_window_move_resize): Use the
	previously unused window->need_resize flag to mark if a window's
	descendents changed size while the window was not visible. In this
	case, when the window becomes visible, we reallocate everything,
	since we didn't keep track of what actually changed.

	(Fixes bug where changing the popdown strings of a
	combo to something of the same length caused them to
	blank out, as reported by Todd Dukes <tdukes@ibmoto.com>)

Tue May 12 02:31:57 1998  Tim Janik  <timj@gtk.org>

	[security audit by Alan Cox]

	* gtk/gtkobject.c (gtk_object_get_arg_type): check for arg_name to not
	exceed maximum assumed size.

	* gtk/gtkmenufactory.c (gtk_menu_factory_create): check that `path' does
	not exceed maximum assumed size.
	(gtk_menu_factory_remove): likewise.
	(gtk_menu_factory_find_recurse): likewise.

Mon May 11 23:53:38 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_queue_resize): queue the idle_sizer with
	GTK_PRIORITY_INTERNAL - 1, so widgets get first resized and then
	redrawn if that is still neccessary. don't allow queueing of already
	destructed objects.